# myMinifb

./: CMakeLists.txt  CMakeLists.~txt
include/: MiniFB.h  MiniFB_cpp.h  MiniFB_enums.h
src/: MiniFB_common.c  MiniFB_cpp.cpp  MiniFB_internal.c  MiniFB_internal.h  MiniFB_linux.c  MiniFB_timer.c  WindowData.h
src/gl/: MiniFB_GL.c  MiniFB_GL.h
src/wayland/: WaylandMiniFB.c  WindowData_Way.h
src/windows/: WinMiniFB.c  WindowData_Win.h
src/x11/: WindowData_X11.h  X11MiniFB.c
tests/: fullscreen.c  hidpi.c  input_events.c  input_events_cpp.cpp  multiple_windows.c  multiple_windows.cpp  noise.c
